work on binary auth rules, user filter and integration test